--- a/elevator/index.html
+++ b/elevator/index.html
@@ -24,7 +24,9 @@
         <link href="css/style.css" rel="stylesheet">
 
         <!-- Custom Fonts -->
-        <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="font-awesome-4.5.0/css/font-awesome.min.css">
+        <!--<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">-->
+        <!--<link href="http://fonts.googleapis.com/css?family=Lobster" rel="stylesheet"'" type="text/css">-->
 
 
         <!-- Template js -->
